fix nowrap

--- a/src/features/ShortenSection/ShortenedLinksList/ShortenedLink/ShortnedLink.scss
+++ b/src/features/ShortenSection/ShortenedLinksList/ShortenedLink/ShortnedLink.scss
@@ -32,6 +32,7 @@
   flex-direction: column;
   gap: 16px;
   color: $cyan;
+  white-space: nowrap;
 }
 
 @media (min-width: $screen--lg) {
